Making build pass on Java 9